--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 	<meta content="black" name="apple-mobile-web-app-status-bar-style">
 	<meta content="Jérémy Belfodil, experienced front end developer based in Paris. Realization of professional websites and web application. Portfolio and technical skills." name="description">
 	<link rel="icon" href="img/favicon.png">
-	<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:500,300|Raleway:900' type='text/css' media='all' />
+	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:500,300|Raleway:900' type='text/css' media='all' />
 
 
 	<title>Jérémy Belfodil | Front End Developer</title>
 
 	<link rel='stylesheet' href='css/style.css' type='text/css' media='all' />
-	<link rel='canonical' href='http://www.jeremy-belfodil.com/en/' />
-	<link rel="alternate" href="http://www.jeremy-belfodil.com" hreflang="fr" />
-	<link rel="alternate" href="http://www.jeremy-belfodil.com/en/" hreflang="en" />
+	<link rel='canonical' href='https://www.jeremy-belfodil.com/en/' />
+	<link rel="alternate" href="https://www.jeremy-belfodil.com" hreflang="fr" />
+	<link rel="alternate" href="https://www.jeremy-belfodil.com/en/" hreflang="en" />
 
 	<!--[if lt IE 9]>
 	<script src="js/ltIE9.js"></script>
