--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
+
 <!doctype html>
 
-<html lang="en_US">
+<html lang="fr_FR">
 
 <head>
 	<meta charset="utf-8">
@@ -12,17 +13,17 @@
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0 user-scalable=no, minimal-ui" name="viewport">
 	<meta content="yes" name="apple-mobile-web-app-capable">
 	<meta content="black" name="apple-mobile-web-app-status-bar-style">
-	<meta content="Jérémy Belfodil, experienced front end developer based in Paris. Realization of professional websites and web application. Portfolio and technical skills." name="description">
+	<meta content="Jérémy Belfodil, développeur front end confirmé basé à Paris. Réalisation de sites internet et d&#039;applications web professionnels. Portfolio et compétences techniques." name="description">
 	<link rel="icon" href="img/favicon.png">
 	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:500,300|Raleway:900' type='text/css' media='all' />
 
 
-	<title>Jérémy Belfodil | Front End Developer</title>
+	<title>Jérémy Belfodil | Développeur Front End</title>
 
-	<link rel='stylesheet' href='css/style.css' type='text/css' media='all' />
-	<link rel='canonical' href='https://www.jeremy-belfodil.com/en/' />
-	<link rel="alternate" href="https://www.jeremy-belfodil.com" hreflang="fr" />
-	<link rel="alternate" href="https://www.jeremy-belfodil.com/en/" hreflang="en" />
+  <link rel='stylesheet' href='css/style.css' type='text/css' media='all' />
+  <link rel='canonical' href='http://www.jeremy-belfodil.com/' />
+  <link rel="alternate" href="http://www.jeremy-belfodil.com" hreflang="fr" />
+  <link rel="alternate" href="http://www.jeremy-belfodil.com/en/" hreflang="en" />
 
 	<!--[if lt IE 9]>
 	<script src="js/ltIE9.js"></script>
@@ -66,38 +67,14 @@
 
 
 
-							<li><a class="nav-spy page-scroller" href="#about-en">about</a></li>
+							<li><a class="nav-spy page-scroller" href="#about">à propos</a></li>
 
 
 
 
 
 
-							<li><a class="nav-spy page-scroller" href="#services-en">services</a></li>
-
-
-
-
-
-
-
-
-
-							<li><a class="nav-spy page-scroller" href="#competences-en">skills</a></li>
-
-
-
-
-
-
-							<li><a class="nav-spy page-scroller" href="#portfolio-en">portfolio</a></li>
-
-
-
-
-
-
-							<li><a class="nav-spy page-scroller" href="#contact-en">contact</a></li>
+							<li><a class="nav-spy page-scroller" href="#services">services</a></li>
 
 
 
@@ -106,7 +83,31 @@
 
 
 
-				<li><a class="change-language" href="/fr">fr</a></li>
+
+							<li><a class="nav-spy page-scroller" href="#competences">compétences</a></li>
+
+
+
+
+
+
+							<li><a class="nav-spy page-scroller" href="#portfolio">portfolio</a></li>
+
+
+
+
+
+
+							<!-- <li><a class="nav-spy page-scroller" href="#contact">contact</a></li> -->
+
+
+
+
+
+
+
+
+				<li><a class="change-language" href="/en">en</a></li>
 
 			</ul>
 
@@ -124,12 +125,12 @@
 				<i class="main-logo icon-JBlogo"></i>
 				<h1 class="main-title">Jérémy Belfodil</h1>
 				<span class="separation"></span>
-				<h2 class="main-subtitle">Front End Developer</h2>
+				<h2 class="main-subtitle">Développeur Front End</h2>
 
 			</div>
 
 
-			<a class="scroll-down icon-angle-down page-scroller" href="#about-en"></a>
+			<a class="scroll-down icon-angle-down page-scroller" href="#about"></a>
 
 
 		</div>
@@ -139,7 +140,7 @@
 
 
 
-			<section id="about-en" class="about">
+			<section id="about" class="about">
 
 	<div class="container">
 
@@ -154,11 +155,10 @@
 			</div>
 
 			<div data-wow-delay="0.2s" class="col-md-6 wow fadeIn">
-				<span class="about-name bold-subtitle">Hi, my name is Jérémy</span>
+				<span class="about-name bold-subtitle">Hello, je suis Jérémy</span>
 				<span class="separation"></span>
-				<p class="about-description">I am <strong>front end developer</strong>, I am 28 years old and I live in Paris. Self-taught and passionate, I master many aspects of web and I like to produce quality code.<br>
-I'm also working on <strong>search engine optimization</strong> and <strong>e-shop solutions</strong>.
-Whatever the scale of your project, I am ready to help !</p>
+				<p class="about-description">Je suis <strong>développeur front end</strong>, j'ai 28 ans et je vis à Paris. Autodidacte et passionné, je maîtrise plusieurs aspects du web et aime produire du code de qualité.<br>Je travaille également sur le <strong>référencement naturel</strong> et la mise en place de <strong>solutions e-commerce</strong>.
+Quelle que soit l'envergure de votre projet, je suis prêt à aider !</p>
 			</div>
 
 		</div>
@@ -167,14 +167,14 @@ Whatever the scale of your project, I am ready to help !</p>
 
 </section>
 
-			<section id="services-en" class="services">
+			<section id="services" class="services">
 
 	<div class="container">
 
 		<div class="wow fadeIn">
 
-			<h1 class="services-title bold-subtitle">The services I offer</h1>
-			<p class="services-description">I provide web development, web design, SEO and e-shop solutions.</p>
+			<h1 class="services-title bold-subtitle">Les services proposés</h1>
+			<p class="services-description">Je fournis le développement, le web design, le référencement ainsi que la mise en place de solutions e-commerce.</p>
 			<span class="separation"></span>
 
 		</div>
@@ -187,8 +187,8 @@ Whatever the scale of your project, I am ready to help !</p>
 
 							<div data-wow-delay="0s" class="service-item wow fadeIn">
 								<span class="service-picto icon-code"></span>
-								<h2 class="service-title bold-item-title">Web development</h2>
-								<p class="service-description">I develop professional websites and web applications integrating the latest web technologies.</p>
+								<h2 class="service-title bold-item-title">Développement Web</h2>
+								<p class="service-description">Je développe des sites et applications web professionnels intégrants les dernières technologies du web.</p>
 							</div>
 
 						</div>
@@ -200,7 +200,7 @@ Whatever the scale of your project, I am ready to help !</p>
 							<div data-wow-delay="0.2s" class="service-item wow fadeIn">
 								<span class="service-picto icon-laptop-mac"></span>
 								<h2 class="service-title bold-item-title">Web design</h2>
-								<p class="service-description">I propose designs to fit your project, with a solid and powerful <strong>responsive design</strong>.</p>
+								<p class="service-description">Je propose des designs adaptés à votre projet, avec un <strong>responsive design</strong> solide et performant.</p>
 							</div>
 
 						</div>
@@ -211,8 +211,8 @@ Whatever the scale of your project, I am ready to help !</p>
 
 							<div data-wow-delay="0.4s" class="service-item wow fadeIn">
 								<span class="service-picto icon-google"></span>
-								<h2 class="service-title bold-item-title">Search engine optimization</h2>
-								<p class="service-description">I set up an HTML code optimized for <strong>SEO</strong> and I integrate the latest recommendations from Google.</p>
+								<h2 class="service-title bold-item-title">Référencement</h2>
+								<p class="service-description">Je mets en place un code HTML optimisé pour le <strong>référencement</strong> ainsi que les dernières recommandations de Google.</p>
 							</div>
 
 						</div>
@@ -223,8 +223,8 @@ Whatever the scale of your project, I am ready to help !</p>
 
 							<div data-wow-delay="0.6s" class="service-item wow fadeIn">
 								<span class="service-picto icon-wordpress"></span>
-								<h2 class="service-title bold-item-title">blog / e-shop</h2>
-								<p class="service-description">I offer solutions tailored to your needs so that you can be 100% self-sufficient in managing your website.</p>
+								<h2 class="service-title bold-item-title">blog / e-commerce</h2>
+								<p class="service-description">J'offre des solutions adaptées à vos besoins pour que vous puissiez être autonome à 100% dans la gestion de votre site web. </p>
 							</div>
 
 						</div>
@@ -238,7 +238,7 @@ Whatever the scale of your project, I am ready to help !</p>
 
 </section>
 
-			<aside id="citation-en" class="citation" style="background-image: url('img/danbo6.jpg')">
+			<aside id="citation" class="citation" style="background-image: url('img/danbo6.jpg')">
 
     <div class="container">
 
@@ -246,13 +246,10 @@ Whatever the scale of your project, I am ready to help !</p>
 
             <div class="col-md-10 col-md-offset-1 wow fadeIn">
 
-                <span class="citation-sentence">Coming <span class="colored">together</span> is a beginning, keeping together is <span class="colored">progress</span>, working together is <span class="colored">success</span></span>
+                <span class="citation-sentence">Se <span class="colored">réunir</span> est un début, rester <span class="colored">ensemble</span> est un progrès, travailler ensemble est la <span class="colored">réussite</span></span>
                 <span class="separation"></span>
 
-
-
-
-				<a href="#contact-en" class="page-scroller btn btn-default btn-lg">let's meet us !</a>
+                <a href="mailto:jbelfodil@gmail.com?subject=Contact" class="page-scroller btn btn-default btn-lg">Allons-y !</a>
             </div>
 
         </div>
@@ -261,14 +258,14 @@ Whatever the scale of your project, I am ready to help !</p>
 
 </aside>
 
-			<section id="competences-en" class="competences">
+			<section id="competences" class="competences">
 
 	<div class="container">
 
 		<div class="wow fadeIn">
 
-			<h1 class="competences-title bold-subtitle">Technical skills</h1>
-			<p class="competences-description">The languages ​​and technologies that I use daily.</p>
+			<h1 class="competences-title bold-subtitle">Compétences techniques</h1>
+			<p class="competences-description">Les différents languages et technologies que j'utilise au quotidien.</p>
 			<span class="separation"></span>
 
 		</div>
@@ -479,14 +476,14 @@ Whatever the scale of your project, I am ready to help !</p>
 
 </section>
 
-			<section id="portfolio-en" class="portfolio">
+			<section id="portfolio" class="portfolio">
 
 	<div class="container">
 
 		<div class="wow fadeIn">
 
 			<h1 class="portfolio-title bold-subtitle">portfolio</h1>
-			<p class="portfolio-description">Some professional projects that I've worked on.</p>
+			<p class="portfolio-description">Quelques projets professionnels sur lesquels j'ai travaillé.</p>
 			<span class="separation"></span>
 
 		</div>
@@ -642,14 +639,14 @@ Whatever the scale of your project, I am ready to help !</p>
 
 </section>
 
-<!-- <section id="contact-en" class="contact">
+<!-- <section id="contact" class="contact">
 
 	<div class="container">
 
 		<div class="wow fadeIn">
 
-			<h1 class="contact-title bold-subtitle">Contact me</h1>
-			<p class="contact-description">For any questions, professional requests or just to talk about your project, do not hesitate !</p>
+			<h1 class="contact-title bold-subtitle">Contactez moi</h1>
+			<p class="contact-description">Pour toutes questions, demandes professionnelles ou bien pour me parler de votre projet, n'hésitez pas !</p>
 			<span class="separation"></span>
 
 		</div>
@@ -662,8 +659,8 @@ Whatever the scale of your project, I am ready to help !</p>
 
 					<div class="form-group form-group-lg">
 						<i class="icon-perm-identity"></i>
-						<label class="control-label" for="contactName">Name</label>
-						<input  name="customerName" data-validation="required" type="text" class="form-control" id="contactName" placeholder="Name">
+						<label class="control-label" for="contactName">Nom</label>
+						<input  name="customerName" data-validation="required" type="text" class="form-control" id="contactName" placeholder="Nom">
 					</div>
 
 					<div class="form-group form-group-lg">
@@ -674,8 +671,8 @@ Whatever the scale of your project, I am ready to help !</p>
 
 					<div class="form-group form-group-lg">
 						<i class="icon-call"></i>
-						<label class="control-label" for="contactPhone">Phone number</label>
-						<input name="phone" data-validation="number length" data-validation-optional="true" data-validation-length="10-16" maxlength="16" type="tel" class="form-control" id="contactPhone" placeholder="Phone number">
+						<label class="control-label" for="contactPhone">Téléphone</label>
+						<input name="phone" data-validation="number length" data-validation-optional="true" data-validation-length="10-16" maxlength="16" type="tel" class="form-control" id="contactPhone" placeholder="Téléphone">
 					</div>
 
 					<div class="form-group form-group-lg">
@@ -691,7 +688,7 @@ Whatever the scale of your project, I am ready to help !</p>
 
 					<div class="bottom-form wow fadeIn">
 
-						<button type="submit" class="submit-btn btn btn-default btn-lg">Send</button>
+						<button type="submit" class="submit-btn btn btn-default btn-lg">Envoyer</button>
 						<i class="loader icon-spinner9"></i>
 						<span class="response"></span>
 					</div>
@@ -706,6 +703,7 @@ Whatever the scale of your project, I am ready to help !</p>
 	</div>
 
 </section> -->
+
 
 
 
@@ -753,15 +751,16 @@ Whatever the scale of your project, I am ready to help !</p>
 
 		</div>
 
-		<span class="copyright">Developed with<i class="icon-heart"></i></span>
+		<span class="copyright">Développé avec<i class="icon-heart"></i></span>
 
 	</div>
 
 </footer>
 
 <script>
-	var currentLanguage = "en_US";
+	var currentLanguage = "fr_FR";
 </script>
+
 <script type='text/javascript' src='js/common.js'></script>
 
 </body>
