--- a/en.html
+++ b/en.html
@@ -248,7 +248,7 @@ Whatever the scale of your project, I am ready to help !</p>
                 <span class="citation-sentence">Coming <span class="colored">together</span> is a beginning, keeping together is <span class="colored">progress</span>, working together is <span class="colored">success</span></span>
                 <span class="separation"></span>
 
-								<a href="mailto:jbelfodil@gmail.com?subject=Contact" class="page-scroller btn btn-default btn-lg">let's meet us !</a>
+								<a href="mailto:jbelfodil@gmail.com?subject=Contact" class="btn btn-default btn-lg">let's meet us !</a>
             </div>
 
         </div>
