--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ Quelle que soit l'envergure de votre projet, je suis prêt à aider !</p>
                 <span class="citation-sentence">Se <span class="colored">réunir</span> est un début, rester <span class="colored">ensemble</span> est un progrès, travailler ensemble est la <span class="colored">réussite</span></span>
                 <span class="separation"></span>
 
-                <a href="mailto:jbelfodil@gmail.com?subject=Contact" class="page-scroller btn btn-default btn-lg">Allons-y !</a>
+                <a href="mailto:jbelfodil@gmail.com?subject=Contact" class="btn btn-default btn-lg">Allons-y !</a>
             </div>
 
         </div>
