--- a/en.html
+++ b/en.html
@@ -19,9 +19,9 @@
 	<title>Jérémy Belfodil | Front End Developer</title>
 
 	<link rel='stylesheet' href='css/style.css' type='text/css' media='all' />
-	<link rel='canonical' href='https://www.jeremy-belfodil.com/en/' />
+	<link rel='canonical' href='https://www.jeremy-belfodil.com/en' />
 	<link rel="alternate" href="https://www.jeremy-belfodil.com" hreflang="fr" />
-	<link rel="alternate" href="https://www.jeremy-belfodil.com/en/" hreflang="en" />
+	<link rel="alternate" href="https://www.jeremy-belfodil.com/en" hreflang="en" />
 
 	<!--[if lt IE 9]>
 	<script src="js/ltIE9.js"></script>
