--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 	<title>Jérémy Belfodil | Développeur Front End</title>
 
   <link rel='stylesheet' href='css/style.css' type='text/css' media='all' />
-  <link rel='canonical' href='http://www.jeremy-belfodil.com/' />
+  <link rel='canonical' href='http://www.jeremy-belfodil.com' />
   <link rel="alternate" href="http://www.jeremy-belfodil.com" hreflang="fr" />
-  <link rel="alternate" href="http://www.jeremy-belfodil.com/en/" hreflang="en" />
+  <link rel="alternate" href="http://www.jeremy-belfodil.com/en" hreflang="en" />
 
 	<!--[if lt IE 9]>
 	<script src="js/ltIE9.js"></script>
